# toon-evaluation-clinicalnotes

./: .env.example  .gitignore  EVALUATION_METHODS.md  EVALUATION_SUMMARY.md  README.md  debug_eval.py  debug_flattened.py  debug_keys.py  debug_metrics.py  debug_norm.py  debug_text_extract.py  pyproject.toml  requirements.txt
scripts/: eval.py  results.md  run_pipeline.py
src/toon_experiment/: config.py
src/toon_experiment/eval/: __init__.py  ground_truth.py  metrics.py  run_eval.py
src/toon_experiment/formats/: __init__.py  base.py  json_format.py  toon_format.py  yaml_format.py
src/toon_experiment/io/: datasets.py
src/toon_experiment/pipeline/: __init__.py  models.py  run.py
src/toon_experiment/prompts/: __init__.py  templates.py
src/toon_experiment/schemas/: summary.py
src/toon_experiment_v1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
