[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toon-experiment-v1"
version = "0.1.0"
description = "LangChain pipeline for JSON/YAML/TOON clinical extraction"
authors = [{name = ""}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
